Adicionado a funcionalidade de compra na loja, versão 01

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -11,4 +11,6 @@
 
 <%= link_to "Sou Admin", new_admin_session_path %> | 
 <%= link_to "Sou Client", new_client_session_path %>
+<br><br>
+<%= link_to "Ver produtos da Loja", products_path %>
 
