--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :imagem %>
-    <%= form.text_field :imagem %>
+    <%= form.file_field :image %>
   </div>
 
   <div class="field">
