--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: purchase, local: true) do |form| %>
+<%= form_with(model: purchase, url: product_purchases_path, local: true) do |form| %>
   <% if purchase.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(purchase.errors.count, "error") %> prohibited this purchase from being saved:</h2>
@@ -10,21 +10,6 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :client_id %>
-    <%= form.text_field :client_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :product_id %>
-    <%= form.text_field :product_id %>
-  </div>
-
-  <div class="field">
-    <%= form.label :valor_do_produto %>
-    <%= form.number_field :valor_do_produto %>
-  </div>
 
   <div class="field">
     <%= form.label :quantidade %>
