--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -20,8 +20,7 @@
         <td><%= purchase.product %></td>
         <td><%= purchase.valor_do_produto %></td>
         <td><%= purchase.quantidade %></td>
-        <td><%= link_to 'Show', purchase %></td>
-        <td><%= link_to 'Edit', edit_purchase_path(purchase) %></td>
+        <td><%= link_to 'Edit', edit_product_purchase_path(purchase) %></td>
         <td><%= link_to 'Destroy', purchase, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -30,4 +29,5 @@
 
 <br>
 
-<%= link_to 'New Purchase', new_purchase_path %>
+<%= link_to 'Voltar', products_path %> |
+<%= link_to 'Página Pricipal', root_path %>
