--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Purchase</h1>
+<h1>Nova Compra</h1>
 
 <%= render 'form', purchase: @purchase %>
 
-<%= link_to 'Back', purchases_path %>
+<%= link_to 'Voltar', products_path %>
