--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -11,6 +11,34 @@
     </div>
   <% end %>
 
+  <!--
+  <table class="table">
+  <thead>
+    <tr>
+      <th>Produto</th>
+      <th>Valor da unidade (dotz)</th>
+      <th>Imagem</th>
+      <th>Valor total</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+      <tr scope="row">
+        <td><%= @product.nome %></td>
+        <td><%= @product.valor_dotz %></td>
+        <td><%= image_tag @product.image, style:"width:50px;" if @product.image.attached? %></td>
+        <% if admin_signed_in? %>
+          <td><%= link_to 'Visualizar', @product %></td>
+          <td><%= link_to 'Editar', edit_product_path(@product) %></td>
+          <td><%= link_to 'Deletar', @product, method: :delete, data: { confirm: 'Tem certeza disso?' } %></td>
+        <% end %>
+        
+      </tr>
+  </tbody>
+</table> -->
+
+<br><br>
   <div class="field">
     <%= form.label :quantidade %>
     <%= form.number_field :quantidade %>
