--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,9 @@
 <p id="notice"><%= notice %></p>
+<div class="container">
+  <!-- Content here -->
 
 <h1>Produtos da Loja DOTZ!!</h1>
-
+<% if admin_signed_in? %>
 <table class="table">
   <thead>
     <tr>
@@ -28,10 +30,6 @@
           <td><%= link_to 'Deletar', product, method: :delete, data: { confirm: 'Tem certeza disso?' } %></td>
         <% end %>
         
-
-        <% if client_signed_in? %>
-          <td><%= link_to 'Comprar Produto', new_product_purchase_path(product) %></td>
-        <% end %>
         
       </tr>
     <% end %>
@@ -39,7 +37,42 @@
 </table>
 
 <br>
-<% if admin_signed_in? %>
-  <%= link_to 'Adicionar Produto', new_product_path %> |
+
+  <%= link_to 'Adicionar Produto', new_product_path %> 
+  <%end%>
+
+
+
+<% if client_signed_in? %>
+
+ <div class="row">
+    
+   
+ <% @products.each do |product| %>
+ <div class="col">
+<div class="card" style="width: 18rem;">
+  <%= image_tag product.image, style:"width:50px;",class: 'card-img-top' if product.image.attached? %>
+  <div class="card-body">
+    <h5 class="card-title"><%= product.nome %></h5>
+    <p class="card-text">     <%= product.valor_dotz %>
+</p>   
+      <%= link_to 'Comprar Produto', new_product_purchase_path(product) , class:"btn btn-primary" %>
+  </div>
+</div>
+<br>
+
+      
+       
+      <%#= product.estoque %>
+        
+ </div>
+    
+        <% end %>
+
+
+ 
+   
+  </div>
+
 <% end %>
-<%= link_to "Página Principal", root_path %>
+<%= link_to "Página Principal", root_path %></div>
