Adicionado uma seção para a edição de perfil do usuário e uma seção para o cliente ver as compras que foram feitas na conta

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,29 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= link_to "Minhas compras", minhas_compras_path %> |
+<%= link_to "Tabela de produtos", products_path %> |
+<%= link_to "Página Principal", root_path %>
+
+<hr>
+<h2>Editar <%= resource_name.to_s.humanize %></h2>
+
+<h3>Meu saldo de Dotz - <%= current_client.saldo_dotz %></h3>
+<hr>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <strong><%= f.label :email %></strong><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    <strong><%= f.label :Nome %></strong><br />
+    <%= f.text_field :nome, autofocus: true, autocomplete: "Meu nome" %>
+  </div>
+
+  <div class="field">
+    <strong><%= f.label :cpf %></strong>
+    <%= f.text_field :cpf, autofocus: true, autocomplete: "000.000.000-00" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -13,31 +31,32 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <strong><%= f.label :Senha_atual %></strong> <i>(Digite sua senha antiga para confirmar as atualizações)</i><br />
+    <%= f.password_field :current_password, autocomplete: "minha-senha-atual" %>
+  </div>
+
+  <div class="field">
+    <strong><%= f.label :Senha %></strong> <i>(Deixe em branco se não quiser mudar)</i><br />
+    <%= f.password_field :password, autocomplete: "minha-nova-senha" %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <em><%= @minimum_password_length %> caracteres no minímo</em>
     <% end %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <strong><%= f.label :Confirmar_senha %></strong><br />
+    <%= f.password_field :password_confirmation, autocomplete: "minha-nova-senha" %>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Atualizar" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>Seção de cancelamento</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p><%= button_to "Cancelar minha conta", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
+<hr>
