--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,7 +5,7 @@
 <% elsif client_signed_in? %>
     <h1>Dashboard Client</h1>
     <%= link_to "Sair da Dashboard", destroy_admin_session_path, method: :delete, data: { confirm: "Tem certeza que quer sair? "} %>|
-    <%= link_to "Meu Perfil", edit_client_path(current_client), method: :patch %>
+    <%= link_to "Meu Perfil", edit_client_registration_path %>
 <% end %>
 
 <p>Bem Vindo a Nossa Loja Dotz!!</p>
@@ -17,4 +17,3 @@
 <% end %>
 
 <%= link_to "Ver produtos da Loja", products_path %>
-
