--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,8 +1,21 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"></p> -->
+<%= notice %>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+   <h2 style="margin-right: 800px">Nosso Produtos</h2>
+
+
+
+        
+            <%= link_to "Página Principal", root_path , class:"btn btn-outline-success my-2 my-sm-0 "%>
+  
+
+
+</nav>
+<br>
 <div class="container">
   <!-- Content here -->
 
-<h1>Produtos da Loja DOTZ!!</h1>
+
 <% if admin_signed_in? %>
 <table class="table">
   <thead>
@@ -75,4 +88,4 @@
   </div>
 
 <% end %>
-<%= link_to "Página Principal", root_path %></div>
+</div>
