Adicionado uma navbar básica e uma tabela teste na index de products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,39 +1,47 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Product -%>
 
-<h1>Produtos da Loja DOTZ!!</h1>
-
-<table class="table">
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Nome</th>
-      <th>Valor dotz</th>
-      <th>Imagem</th>
-      <th>Estoque</th>
-      <th colspan="3"></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:nome) %></th>
+      <th><%= model_class.human_attribute_name(:valor_dotz) %></th>
+      <th><%= model_class.human_attribute_name(:imagem) %></th>
+      <th><%= model_class.human_attribute_name(:estoque) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @products.each do |product| %>
-      <tr scope="row">
+      <tr>
+        <td><%= link_to product.id, product_path(product) %></td>
         <td><%= product.nome %></td>
         <td><%= product.valor_dotz %></td>
-        <td><%= image_tag product.image, style:"width:50px;" if product.image.attached? %></td>
+        <td><%= product.imagem %></td>
         <td><%= product.estoque %></td>
-        <% if admin_signed_in? %>
-          <td><%= link_to 'Visualizar', product %></td>
-          <td><%= link_to 'Editar', edit_product_path(product) %></td>
-          <td><%= link_to 'Deletar', product, method: :delete, data: { confirm: 'Tem certeza disso?' } %></td>
-        <% end %>
-        <td><%= link_to 'Comprar Produto', new_product_purchase_path(product) %></td>
-        
+        <td><%=l product.created_at %></td>
+        <td class='col-sm-4'>
+          <%= link_to t('.Visualizar', :default => t("helpers.links.Visualizar")),
+                      product_path(product), :class => 'btn btn-primary' %>
+          <% if admin_signed_in? %>
+            <%= link_to t('.Editar', :default => t("helpers.links.Editar")),
+                        edit_product_path(product), :class => 'btn btn-success' %>
+            <%= link_to t('.Deletar', :default => t("helpers.links.Deletar")),
+                        product_path(product),
+                        :method => :delete,
+                        :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                        :class => 'btn btn-danger' %>
+          <% end %>
+          <%= link_to t('.Comprar produto', :default => t("helpers.links.Comprar produto")),
+                        new_product_purchase_path(product), :class => 'btn btn-success' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-<% if admin_signed_in? %>
-  <%= link_to 'Adicionar Produto', new_product_path %> |
-<% end %>
-<%= link_to "Página Principal", root_path %>
+
