--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,37 +1,55 @@
-<%= form_with(model: product, local: true) do |form| %>
-  <% if product.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
+<%= form_for @product, :html => { :class => "form-horizontal product" } do |f| %>
 
-      <ul>
-      <% product.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <% if @product.errors.any? %>
+    <div id="error_expl" class="panel panel-danger">
+      <div class="panel-heading">
+        <h3 class="panel-title"><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h3>
+      </div>
+      <div class="panel-body">
+        <ul>
+        <% @product.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :nome %>
-    <%= form.text_field :nome %>
+  <div class="form-group">
+    <%= f.label :nome, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :nome, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:nome) %>
+  </div>
+  <div class="form-group">
+    <%= f.label :valor_dotz, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :valor_dotz, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:valor_dotz) %>
+  </div>
+  <div class="form-group">
+    <%= f.label :imagem, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :imagem, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:imagem) %>
+  </div>
+  <div class="form-group">
+    <%= f.label :estoque, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.text_field :estoque, :class => 'form-control' %>
+    </div>
+    <%=f.error_span(:estoque) %>
   </div>
 
-  <div class="field">
-    <%= form.label :valor_dotz %>
-    <%= form.text_field :valor_dotz %>
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                products_path, :class => 'btn btn-default' %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :imagem %>
-    <%= form.file_field :image %>
-  </div>
-
-  <div class="field">
-    <%= form.label :estoque %>
-    <%= form.text_field :estoque %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
 <% end %>
