--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,24 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = Product -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Nome:</strong>
-  <%= @product.nome %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:nome) %>:</strong></dt>
+  <dd><%= @product.nome %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:valor_dotz) %>:</strong></dt>
+  <dd><%= @product.valor_dotz %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:imagem) %>:</strong></dt>
+  <dd><%= @product.imagem %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:estoque) %>:</strong></dt>
+  <dd><%= @product.estoque %></dd>
+</dl>
 
-<p>
-  <strong>Valor dotz:</strong>
-  <%= @product.valor_dotz %>
-</p>
-
-<p>
-  <strong>Imagem:</strong>
-  <%= image_tag @product.image, style:"width:50px;" if @product.image.attached?%>
-</p>
-
-<p>
-  <strong>Estoque:</strong>
-  <%= @product.estoque %>
-</p>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<%= link_to t('.back', :default => t("helpers.links.back")),
+              products_path, :class => 'btn btn-default'  %>
+<%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_product_path(@product), :class => 'btn btn-default' %>
+<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              product_path(@product),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
