--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -8,7 +8,7 @@
 .card {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width:180px;
+  width:250px;
 }
 
 .card:hover {
@@ -23,7 +23,7 @@
 <body>
 
 <div class="card">
-  <img src="https://http2.mlstatic.com/sapato-esportivo-casual-masculino-de-amarrar-com-biqueira-D_NQ_NP_726824-MLB31117452610_062019-F.webp%202x" alt="Sapato" style="width:100px;">
+  <!--<img src="https://http2.mlstatic.com/sapato-esportivo-casual-masculino-de-amarrar-com-biqueira-D_NQ_NP_726824-MLB31117452610_062019-F.webp%202x" alt="Sapato" style="width:100px;">-->
   <%= image_tag @produtct.image if @product.image.attached? %>
   <div class="container">
     <h4><b> <%= @product.nome %> </b></h4> 
