O gerenciamento dos usuários não está funcionando da forma correta

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,6 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+<%= link_to "Clientes cadastrados", users_index_path %>
+<hr>
+<h1>Saldo <%= current_user.saldo_dotz %> dotz</h1>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -8,36 +9,47 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
+  <div class="field">
+    <%= f.label :nome %><br />
+    <%= f.text_field :nome, autofocus: true, autocomplete: "Seu nome" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :cpf %><br />
+    <%= f.text_field :cpf, autofocus: true, autocomplete: "000.000.000-00" %>
+  </div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.label :password %> <i>(Deixe em branco se não quiser atualizar)</i><br />
+    <%= f.password_field :password, autocomplete: "Nova-Senha" %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <em> São necessários no minimo <%= @minimum_password_length %> caracteres</em>
     <% end %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.label :Senha_Atual %> <i>(Sua senha atual é necessária para atualizar as informações)</i><br />
+    <%= f.password_field :current_password, autocomplete: "Senha-Atual" %>
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+    <%= f.label :Confirmar_Senha %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "Confirmar-Senha" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Atualizar" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<% if current_user.client %>
+<h3>Cancelar conta</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+  <p><%= button_to "Cancelar minha conta", registration_path(resource_name), data: { confirm: "Tem certeza disso?" }, method: :delete %></p>
+<% end %>
+<%= link_to "Voltar", :back %>
