--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,18 +1,20 @@
 
-<% if admin_signed_in? %>
+<% if user_signed_in? && current_user.admin %>
     <h1>Dashboard Admin</h1>
-    <%= link_to "Sair do Admin", destroy_client_session_path, method: :delete, data: { confirm: "Tem certeza que quer sair? "} %>
-<% elsif client_signed_in? %>
+    <%= link_to "Sair do Admin", destroy_user_session_path, method: :delete, data: { confirm: "Tem certeza que quer sair? "} %>
+    <%= link_to "Meu Perfil", edit_user_registration_path %>
+<% elsif user_signed_in? && current_user.client %>
     <h1>Dashboard Client</h1>
-    <%= link_to "Sair da Dashboard", destroy_admin_session_path, method: :delete, data: { confirm: "Tem certeza que quer sair? "} %>|
-    <%= link_to "Meu Perfil", edit_client_path(current_client), method: :patch %>
+    <%= link_to "Sair da Dashboard", destroy_user_session_path, method: :delete, data: { confirm: "Tem certeza que quer sair? "} %>|
+    <%= link_to "Meu Perfil", edit_user_registration_path %>
+<% else %>
+    <h1>Logue na plataforma e veja o que tem dentro!!</h1>
 <% end %>
 
 <p>Bem Vindo a Nossa Loja Dotz!!</p>
 
-<% unless admin_signed_in? || client_signed_in? %>
-    <%= link_to "Sou Admin", new_admin_session_path %> | 
-    <%= link_to "Sou Client", new_client_session_path %>
+<% unless user_signed_in? %>
+    <%= link_to "Login", new_user_session_path %>
 <br><br>
 <% end %>
 
