--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -20,5 +20,5 @@
   <%= @client.saldo_dotz %>
 </p>
 
-<%= link_to 'Edit', edit_client_path(current_client) %> |
-<%= link_to 'Back', products_path %>
+<%#= link_to 'Editar', client_update_path(@client) %> |
+<%= link_to 'Voltar', clients_path %>
