--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', client: @client %>
 
-<%= link_to 'Show', @client %> |
+<%#= link_to 'Show', @client %> |
 <%= link_to 'Back', products_path %>
