change controller and routes edit to client

--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: @client, url: client_add_dotz_path, method: :patch, local: true) do |form| %>
+<%= form_with(model: client, local: true) do |form| %>
+
   <% if @client.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@client.errors.count, "error") %> prohibited this client from being saved:</h2>
