--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -13,23 +13,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
-
-  <div class="field">
-    <%= form.label :nome %>
-    <%= form.text_field :nome %>
-  </div>
-
-  <div class="field">
-    <%= form.label :cpf %>
-    <%= form.text_field :cpf %>
-  </div>
-
-  <div class="field">
-    <%= form.label :saldo_dotz %>
-    <%= form.number_field :saldo_dotz %>
+    <%= form.label :valor %>
+    <%= form.number_field :valor %>
   </div>
 
   <div class="actions">
