--- a/app/views/dashboard/_nav.html.erb
+++ b/app/views/dashboard/_nav.html.erb
@@ -35,7 +35,11 @@
             <i class="nc-icon nc-bank"></i>
               <p>Loja</p>
               <% if admin_signed_in? %>
-                <%= link_to "Clientes Cadastrados", clients_path %>
+                  <%= link_to  clients_path do %> 
+              <i class="nc-icon nc-single-02"></i>
+              <p>Clientes Cadastrados</p>
+              <%end%>
+
               <% end %>
             <%end%>
             
