--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,13 +1,60 @@
+
+<%= render partial: 'dashboard/nav'%>
+
+
+<div class="main-panel">
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg navbar-absolute fixed-top navbar-transparent">
+        <div class="container-fluid">
+          <div class="navbar-wrapper">
+            <div class="navbar-toggle">
+              <button type="button" class="navbar-toggler">
+                <span class="navbar-toggler-bar bar1"></span>
+                <span class="navbar-toggler-bar bar2"></span>
+                <span class="navbar-toggler-bar bar3"></span>
+              </button>
+            </div>
+            <a class="navbar-brand" href="javascript:;">Visualizar Produto </a>
+          
+
+<%= link_to 'Voltar',clients_path  ,class:'btn btn-muted btn-round'%>
+
+          
+              
+          </div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-bar navbar-kebab"></span>
+            <span class="navbar-toggler-bar navbar-kebab"></span>
+            <span class="navbar-toggler-bar navbar-kebab"></span>
+          </button>
+        
+        </div>
+      </nav>
+ 
+
+
+
+        <div class="content">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="card card-user">
+                
+                
+                <div class="card-footer">
+       
+                  <div class="button-container">
+                    <div class="row">
+                      <div class="col-lg-3 col-md-6 col-6 ml-auto">
+
+                      </div>
+                      <div class="col-lg-4 col-md-6 col-6 ml-auto mr-auto">       
+
 <p id="notice"><%= notice %></p>
 
+         <hr>               
 <p>
   <strong>Nome:</strong>
   <%= @client.nome %>
-</p>
-
-<p>
-  <strong>CPF:</strong>
-  <%= @client.cpf %>
 </p>
 
 <p>
@@ -19,6 +66,29 @@
   <strong>Saldo dotz:</strong>
   <%= @client.saldo_dotz %>
 </p>
+ <hr>
+                      </div>
+                      <div class="col-lg-3 mr-auto">
 
-<%#= link_to 'Editar', client_update_path(@client) %> |
-<%= link_to 'Voltar', clients_path %>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          
+
+          </div>
+        </div>
+
+
+
+
+
+
+         
+     
+        
+    </div>
+   
+
