--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700,200");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css");
-@import 'dash/bootstrap.min.css';
-@import 'dash/paper-dashboard.css';
-@import 'demo/demo.css';
+@import './dash/bootstrap.min';
+@import './dash/paper-dashboard';
+@import './demo/demo.css';
 
 .footer {
     padding: 24px 0;
