--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -58,7 +58,7 @@
                       
                       <p class="card-title"><%= product.valor_dotz %> dotz</p>
                       <p>
-                        <% if product.estoque > 1 %>
+                        <% if product.estoque >= 1 %>
                           <td>Estoque : <%= product.estoque %></td> 
                         <% else %>
                           <td>Esgotado!!</td>
@@ -80,7 +80,7 @@
           <td><%= link_to 'Editar', edit_product_path(product), class:'btn btn-secondary btn-round' %></td>
           <td><%= link_to 'Deletar', product, method: :delete, data: { confirm: 'Tem certeza disso?' }, class:'btn btn-danger btn-round' %></td>
         <% else %>
-        <% if  product.estoque > 1 %>
+        <% if  product.estoque >= 1 %>
           <td><%= link_to 'Comprar Produto', new_product_purchase_path(product),class:'btn btn-success btn-round' %></td>
           <%end%>
         <%end%>
