add upload cloudinary

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -48,7 +48,8 @@
                 <div class="row">
                   <div class="col-5 col-md-4">
                     <div class="icon-big text-center icon-warning">
-                    <%= image_tag product.image, style:"width:150px;" if product.image.attached? %>
+                      <%= image_tag(rails_blob_path(course.image, disposition: "attachment"), style:"width:150px;") if course.image.attached? %>
+                  
                     </div>
                   </div>
                     
