--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -39,7 +39,8 @@
             <div class="col-md-12">
               <div class="card card-user">
                 <div class="image text-center">
-                  <%= image_tag @product.image, style:"width:250px;" if @product.image.attached?%>
+                  <%= image_tag  image_tag(rails_blob_path(product.imagem, disposition: "attachment"),style:"width:250px;"if @product.imagem.attached?)  %>
+                 
                 </div>
                 
                 <div class="card-footer">
