--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -39,7 +39,7 @@
             <div class="col-md-12">
               <div class="card card-user">
                 <div class="image text-center">
-                  <%= image_tag(rails_blob_path(product.imagem, disposition: "attachment",style:"width:250px;"))  %>
+                  <%= image_tag(rails_blob_path(@product.imagem, disposition: "attachment",style:"width:250px;"))  %>
 
                 </div>
                 
