Adicionado uma imagem padrão aos produtos

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -48,7 +48,11 @@
                 <div class="row">
                   <div class="col-5 col-md-4">
                     <div class="icon-big text-center icon-warning">
-                    <%= image_tag product.image, style:"width:150px;" if product.image.attached? %>
+                      <% if product.image.attached? %>
+                        <%= image_tag product.image, style:"width:150px;" %>
+                      <% else %>
+                        <img src="/images/default_image.png", style="width:150px;">
+                      <% end %>
                     </div>
                   </div>
                     
