--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -49,7 +49,7 @@
                   <div class="col-5 col-md-4">
                     <div class="icon-big text-center icon-warning">
                       <% if product.imagem.attached? %>
-                        <%= image_tag(rails_blob_path(product.imagem, disposition: "attachment"), style:"width:150px;") if product.imagem.attached? %>
+                        <%= image_tag(rails_blob_path(product.imagem, disposition: "attachment"), style:"width:150px;") %>
                       <% else %>
                         <img src="/images/default_image.png", style="width:150px;">
                       <% end %>
