--- a/app/views/purchases/new.html.erb
+++ b/app/views/purchases/new.html.erb
@@ -38,7 +38,7 @@
                 <div class="row">
                   <div class="col-5 col-md-4">
                     <div class="icon-big text-center icon-warning">
-                       <%= image_tag @product.image ,style:"width:250px;" if @product.image.attached? %>
+                       <%= image_tag @product.imagem ,style:"width:250px;" if @product.imagem.attached? %>
                     </div>
                   </div>
                   <div class="col-8 col-md-8">
